--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -16,10 +16,12 @@
     "expo": "~53.0.20",
     "expo-asset": "^11.1.7",
     "expo-status-bar": "~2.2.3",
+    "formik": "^2.4.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "react-router-native": "^6.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
