--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -9,11 +9,19 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
+    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "dotenv": "^17.2.1",
     "expo": "~53.0.20",
     "expo-asset": "^11.1.7",
@@ -26,16 +34,25 @@
     "react-native": "0.79.5",
     "react-native-web": "^0.20.0",
     "react-router-native": "^6.30.0",
-    "yup": "^1.6.1",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "source-map-support": "^0.5.21",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/eslint-parser": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.9.0",
     "babel-eslint": "^10.1.0",
+    "babel-preset-expo": "^13.2.3",
     "eslint": "^9.31.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^53.0.9",
+    "react-test-renderer": "^19.0.0"
   },
   "private": true
 }
